[package]
name = "rust-grep"
version = "0.1.0"
edition = "2021"
authors = ["mei.riccardo96@gmail.com"]
license = "MIT"
description = "A simple command-line tool replicating 'grep' in Rust."
readme = "README.md"
homepage = "https://github.com/richim96"
repository = "https://github.com/richim96/rust-grep"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]


[dependencies]
anyhow = "1.0.75"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10.1"
indicatif = "0.17.7"
log = "0.4.20"
